Implementing socket io

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,24 @@
     <h1 class="mt-2">Socket client</h1>
     <hr>
 
+    <p>
+        Server Status:
+        <span id="lblOnline" class="text-success">Online</span>
+        <span id="lblOffline" class="text-danger">Offline</span>
+    </p>
+
+    <div class="row">
+        <div class="col">
+            <input type="text" id="txtMessage" class="form-control">
+        </div>
+        <div class="col">
+            <button id="btnSend" class="btn btn-primary">
+                Send
+            </button>
+        </div>
+    </div>
+
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
 </body>
 </html>
